--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
   </head>
   <body>
-  
-    <div class="row flex-row"> 
-       <div class="col py-3 col-2 ms-4 nav flex-column" id="bears" role="tablist" aria-orientation="vertical">
+  <div class="d-flex">
+    <div class="row flex-row w-25"> 
+       <div class="mt-3 ms-3 nav flex-column" id="bears" role="tablist" aria-orientation="vertical">
         <div class="col border bg-primary">
-        <h2 class="text-start pt-2 text-white fs-6 ps-3 ">American Black Bear</h2>
+        <h2 class="text-start pt-4 text-white fs-6 ">American Black Bear</h2>
       </div>
         <div class="col border">
-        <h2 class="fs-6 text-start pt-2 ps-3 ">Sloth Bear</h2>
+        <h2 class="fs-6 text-start pt-4 ps-3 ">Sloth Bear</h2>
       </div>
         <div class="col border">
-        <h2 class="fs-6 text-start pt-2 ps-3">Sun Bear</h2>
+        <h2 class="fs-6 text-start pt-4 ps-3">Sun Bear</h2>
       </div>
       </div>
     </div>
-    <div class=" row flex-row-reverse justify-content-center me-5">
-    <div class="d-flex col py-3 col-7 nav flex-column" id="bears" role="tablist" aria-orientation="vertical">
+    <div class="row flex-row">
+    <div class="d-flex col py-3 col-7 ms-4 nav flex-column" id="bears" role="tablist" aria-orientation="vertical">
       <div class="col pt-1 mt-3 ms-3">
         <h2 class="fs-6 text-start text-secondary bg-light p-3">Posts / American Black Bear</h2>
         </div>
@@ -48,6 +48,7 @@
     </div>
     </div>
   </div>
+</div>
   </body>
 </html>
       
